test website rebuild

--- a/fiu_jobtalk_20190408.html
+++ b/fiu_jobtalk_20190408.html
@@ -3285,7 +3285,7 @@ slide:not(.current) .plotly.html-widget{
 
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Reproducible Data Science and Software</h2></hgroup><article  id="reproducible-data-science-and-software">
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  class="fullslide" id="section">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section" class="fullslide">
 
 <center>
 
@@ -3531,7 +3531,7 @@ slide:not(.current) .plotly.html-widget{
 <li><em>SPE</em> measures the <font color="#081E3F"><strong>goodness-of-fit</strong></font> of the \(d\)-dimensional model.</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  class="fullslide" id="section-1">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-1" class="fullslide">
 
 <center>
 
@@ -3703,7 +3703,7 @@ h(t) = h_0(t)\exp\left[\beta_1\text{PC}_1 + \beta_2\text{male} + \beta_3(\text{P
 
 </center>
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  class="fullslide" id="section-2">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-2" class="fullslide">
 
 <center>
 
@@ -3756,7 +3756,7 @@ h(t) = h_0(t)\exp\left[\beta_1\text{PC}_1 + \beta_2\text{male} + \beta_3(\text{P
 <li><strong>My mentors</strong>: Dean Young, Amanda Hering, James Stamey, Steven Chen, and Lily Wang</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  class="flexbox vcenter" id="section-3">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-3" class="flexbox vcenter">
 
 <div class="centered">
 <p><font size = "20"> Thank You!</p>
